# AssetStudio

./: .gitignore  AssetStudio.sln  Directory.Build.props  NOTICE.md  README.md
AssetStudio/: AssetHandle.cs  AssetStudio.csproj  AssetsManager.cs  BundleFile.cs  FileReader.cs  IImported.cs  ImportHelper.cs  MemoryPressureException.cs  ObjectReader.cs  Progress.cs  ProjectIndex.cs  ProjectScanner.cs  ResourceReader.cs  SerializedFile.cs  SevenZipHelper.cs  SubStream.cs
AssetStudio.Avalonia/: App.axaml  App.axaml.cs  AssetStudio.Avalonia.csproj  AvatarReferenceMeshSimplifier.cs  ErrorExporter.cs  ExportOptionsWindow.cs  FFmpegAudioTranscoder.cs  FontAssetPreviewRenderer.cs  GUILogger.cs  MainWindow.Audio.cs  MainWindow.Controls.cs  MainWindow.Loading.cs  MainWindow.TextAssetPreview.cs  MainWindow.Theme.cs  MainWindow.axaml  MainWindow.axaml.cs  MeshPreviewControl.cs  MessageBox.cs  PcmWavePreviewPlayer.cs  PreviewMeshSimplifier.cs  Program.cs  ProjectEditorWindow.cs  ProjectManagerStore.cs  ProjectManagerWindow.axaml  ProjectManagerWindow.axaml.cs  SQLiteProjectIndexCache.cs  TextAssetPreviewBuilder.cs  TextureGLPreviewControl.cs  WinMmAudioPlayer.cs  app.manifest
AssetStudio.PInvoke/: AssetStudio.PInvoke.csproj  DllLoader.cs
AssetStudioFBXWrapper/: AssetStudioFBXWrapper.csproj
AssetStudioGUI/: AssetStudioGUI.csproj  AssetStudioGUIForm.Designer.cs  AssetStudioGUIForm.cs  (+4 more)
Texture2DDecoderNative/: CMakeLists.txt  astc.cpp  bcn.cpp  etc.cpp  fp16.h  unitycrunch.cpp
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderNative/unitycrunch/: crn_decomp.h
(+53 files in other folders)
